Gabi/Eduardo - Fix whitespace on the right

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,14 @@ html {
 
 body {
 	font-family: $font-family;
-	overflow-x: hidden;
+}
+
+.row {
+	margin: 0;
+}
+
+.col-xs-12 {
+	padding: 0;
 }
 
 @media (max-width: 768px) {
